--- a/frontend/styles/main.scss
+++ b/frontend/styles/main.scss
@@ -57,7 +57,7 @@
 @import 'bootstrap/scss/utilities/api';
 
 // Icon font
-$fa-font-path: 'font-awesome/fonts';
+// $fa-font-path: 'font-awesome/fonts';
 @import 'font-awesome/scss/font-awesome';
 
 // Import FontAwesome 4 explicitly to:
@@ -66,7 +66,8 @@ $fa-font-path: 'font-awesome/fonts';
 @import 'font-awesome/scss/variables';
 @import 'font-awesome/scss/mixins';
 
-$fa-font-path: 'font-awesome/fonts';
+// $fa-font-path: 'font-awesome/fonts';
+$fa-font-path: "#{$vite-origin}/static/node_modules/.pnpm/font-awesome@4.7.0/node_modules/font-awesome/fonts/";
 @font-face {
   font-family: 'FontAwesome';
   src: url('#{$fa-font-path}/fontawesome-webfont.eot?v=#{$fa-version}');
